service Page update
1. update the expired image
2. upload Service

--- a/House/houseDetails.html
+++ b/House/houseDetails.html
@@ -90,28 +90,28 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="http://goo.gl/04j7Nn" alt="Chania">
+        <img src="https://goo.gl/CrEZ1K" alt="Chania">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
         </div>
       </div>
       <div class="item">
-        <img src="http://goo.gl/04j7Nn" alt="Chania">
+        <img src="https://goo.gl/4RVQMc" alt="Chania">
         <div class="carousel-caption">
           <h3>Chania</h3>
           <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
         </div>
       </div>
       <div class="item">
-        <img src="http://goo.gl/04j7Nn" alt="Flower">
+        <img src="https://goo.gl/LTkcSB" alt="Flower">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
         </div>
       </div>
       <div class="item">
-        <img src="http://goo.gl/04j7Nn" alt="Flower">
+        <img src="https://goo.gl/afOkYu" alt="Flower">
         <div class="carousel-caption">
           <h3>Flowers</h3>
           <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -139,23 +139,23 @@
           <div class="row">
             <div class="col-md-4 col-sm-4">
               <div class="thumbnail" onclick="window.open('/House/houseDetails.html','_self')">
-                <img src="http://goo.gl/0sX3jq" >
+                <img src="https://goo.gl/iJD9vC" >
               </div>
               <div class="thumbnail">
-                <img src="http://goo.gl/an2HXY" >
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-4">
-              <div class="thumbnail">
-                <img src="http://goo.gl/Av1pac" >
-              </div>
-              <div class="thumbnail">
-                <img src="http://goo.gl/vw43v1" >
+                <img src="https://goo.gl/7GjLSH" >
               </div>
             </div>
             <div class="col-md-4 col-sm-4">
               <div class="thumbnail">
-                <img src="http://goo.gl/0Kd7UO" >
+                <img src="https://goo.gl/89kQ6Z" >
+              </div>
+              <div class="thumbnail">
+                <img src="https://goo.gl/zXAaug" >
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+              <div class="thumbnail">
+                <img src="https://goo.gl/vu9KAA" >
               </div>
             </div>
           </div>
